#26277 sonarq feedback